--- a/client/src/jade/next-distro-fe/form/partials/_input.jade
+++ b/client/src/jade/next-distro-fe/form/partials/_input.jade
@@ -1,5 +1,8 @@
 // Input text field
 .field
-  label.label.required= field.questionPrompt
+  label.label(class=required)= field.questionPrompt
   .control
-    input.input(type= field.questionType name= field.questionUUID, placeholder='Your answer', required='')
+    if required === "required"
+      input.input(type= field.questionType name= field.questionUUID, placeholder='Your answer', required)
+    else
+      input.input(type= field.questionType name= field.questionUUID, placeholder='Your answer')
