--- a/client/src/css/_fonts.css
+++ b/client/src/css/_fonts.css
@@ -47,26 +47,26 @@
 }
 
 @font-face {
-    font-family: "Montserrat";
-    src: url("../fonts/css/Montserrat-Regular.eot"); /* IE9 Compat Modes */
-    src: url("../fonts/css/Montserrat-Regular.eot?#iefix") format("embedded-opentype"), /* IE6-IE8 */
-      url("../fonts/css/Montserrat-Regular.otf") format("opentype"), /* Open Type Font */
-      url("../fonts/css/Montserrat-Regular.svg") format("svg"), /* Legacy iOS */
-      url("../fonts/css/Montserrat-Regular.woff") format("woff"), /* Modern Browsers */
-      url("../fonts/css/Montserrat-Regular.woff2") format("woff2"); /* Modern Browsers */
-    font-weight: normal;
-    font-style: normal;
-  }
+  font-family: 'Montserrat';
+  src: url('../fonts/css/Montserrat-Regular.eot'); /* IE9 Compat Modes */
+  src: url('../fonts/css/Montserrat-Regular.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+    url('../fonts/css/Montserrat-Regular.svg') format('svg'), /* Legacy iOS */
+    url('../fonts/css/Montserrat-Regular.ttf') format('truetype'), /* Safari, Android, iOS */
+    url('../fonts/css/Montserrat-Regular.woff') format('woff'), /* Modern Browsers */
+    url('../fonts/css/Montserrat-Regular.woff2') format('woff2'); /* Modern Browsers */
+  font-weight: normal;
+  font-style: normal;
+}
 
-  @font-face {
-    font-family: "Montserrat";
-    src: url("../fonts/css/Montserrat-Bold.eot"); /* IE9 Compat Modes */
-    src: url("../fonts/css/Montserrat-Bold.eot?#iefix") format("embedded-opentype"), /* IE6-IE8 */
-      url("../fonts/css/Montserrat-Bold.otf") format("opentype"), /* Open Type Font */
-      url("../fonts/css/Montserrat-Bold.svg") format("svg"), /* Legacy iOS */
-      url("../fonts/css/Montserrat-Bold.woff") format("woff"), /* Modern Browsers */
-      url("../fonts/css/Montserrat-Bold.woff2") format("woff2"); /* Modern Browsers */
-    font-weight: bold;
-    font-style: normal;
-  }
+@font-face {
+  font-family: 'Montserrat';
+  src: url('../fonts/css/Montserrat-Bold.eot'); /* IE9 Compat Modes */
+  src: url('../fonts/css/Montserrat-Bold.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+    url('../fonts/css/Montserrat-Bold.svg') format('svg'), /* Legacy iOS */
+    url('../fonts/css/Montserrat-Bold.ttf') format('truetype'), /* Safari, Android, iOS */
+    url('../fonts/css/Montserrat-Bold.woff') format('woff'), /* Modern Browsers */
+    url('../fonts/css/Montserrat-Bold.woff2') format('woff2'); /* Modern Browsers */
+  font-weight: bold;
+  font-style: normal;
+}
 
